--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,6 +92,7 @@
     <script src="/js/dependencies/backbone-min.js"></script>
     <script src="/js/dependencies/jquery.min.js"></script>
     <script src="/js/dependencies/underscore-min.js"></script>
+    <script src="/js/test-view.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
