backbone create/destroy complete

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,7 +60,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -92,7 +92,13 @@
     <script src="/js/dependencies/backbone-min.js"></script>
     <script src="/js/dependencies/jquery.min.js"></script>
     <script src="/js/dependencies/underscore-min.js"></script>
-    <script src="/js/test-view.js"></script>
+    <script src="/js/app/bootload.js"></script>
+    <script src="/js/collections/user.js"></script>
+    <script src="/js/collections/users.js"></script>
+    <script src="/js/models/user.js"></script>
+    <script src="/js/views/user-form.js"></script>
+    <script src="/js/views/user.js"></script>
+    <script src="/js/views/users.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
