sails-permissions, sails-auth and beginning of user/employee app

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -92,9 +92,15 @@
     <script src="/js/dependencies/backbone-min.js"></script>
     <script src="/js/dependencies/jquery.min.js"></script>
     <script src="/js/dependencies/underscore-min.js"></script>
+    <script src="/js/app/app.js"></script>
     <script src="/js/app/bootload.js"></script>
+    <script src="/js/collections/employees.js"></script>
     <script src="/js/collections/users.js"></script>
+    <script src="/js/models/employee.js"></script>
     <script src="/js/models/user.js"></script>
+    <script src="/js/views/employee-form.js"></script>
+    <script src="/js/views/employee.js"></script>
+    <script src="/js/views/employees.js"></script>
     <script src="/js/views/user-form.js"></script>
     <script src="/js/views/user.js"></script>
     <script src="/js/views/users.js"></script>
