waterlock and sails-auth gone..

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -60,7 +60,7 @@
     -->
 
     <!--TEMPLATES-->
-    <script type="text/javascript" src="/jst.js"></script>
+    
     <!--TEMPLATES END-->
 
 
@@ -95,15 +95,13 @@
     <script src="/js/app/app.js"></script>
     <script src="/js/app/bootload.js"></script>
     <script src="/js/collections/employees.js"></script>
-    <script src="/js/collections/users.js"></script>
     <script src="/js/models/employee.js"></script>
     <script src="/js/models/user.js"></script>
+    <script src="/js/routes/index.js"></script>
     <script src="/js/views/employee-form.js"></script>
     <script src="/js/views/employee.js"></script>
     <script src="/js/views/employees.js"></script>
     <script src="/js/views/user-form.js"></script>
-    <script src="/js/views/user.js"></script>
-    <script src="/js/views/users.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
