--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,7 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/styles/importer.css">
+    
     <!--STYLES END-->
   </head>
 
@@ -88,20 +88,27 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/backbone-min.js"></script>
-    <script src="/js/dependencies/jquery.min.js"></script>
-    <script src="/js/dependencies/underscore-min.js"></script>
-    <script src="/js/app/app.js"></script>
-    <script src="/js/app/bootload.js"></script>
-    <script src="/js/collections/employees.js"></script>
-    <script src="/js/models/employee.js"></script>
-    <script src="/js/models/user.js"></script>
-    <script src="/js/routes/index.js"></script>
-    <script src="/js/views/employee-form.js"></script>
-    <script src="/js/views/employee.js"></script>
-    <script src="/js/views/employees.js"></script>
-    <script src="/js/views/user-form.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/boilerplate.js"></script>
+    <script src="/js/collection/employees.js"></script>
+    <script src="/js/controller/login.js"></script>
+    <script src="/js/controller/register.js"></script>
+    <script src="/js/controller/user.js"></script>
+    <script src="/js/lib/backbone/backbone-min.js"></script>
+    <script src="/js/lib/jquery/jquery.min.js"></script>
+    <script src="/js/lib/require/require.js"></script>
+    <script src="/js/lib/sails/sails.io.js"></script>
+    <script src="/js/lib/underscore/underscore-min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/model/employee.js"></script>
+    <script src="/js/model/user.js"></script>
+    <script src="/js/router.js"></script>
+    <script src="/js/text.js"></script>
+    <script src="/js/view/employee/detail.js"></script>
+    <script src="/js/view/employee/form.js"></script>
+    <script src="/js/view/employee/list.js"></script>
+    <script src="/js/view/login/form.js"></script>
+    <script src="/js/view/register/form.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
